Fix vertical-alignment link icons

--- a/components/21-atoms/link/_link.scss
+++ b/components/21-atoms/link/_link.scss
@@ -18,7 +18,7 @@ a {
     border: 0;
     font-size: 1.3em;
     line-height: 1.4em;
-    vertical-align: -25%;
+    vertical-align: middle;
   }
 
   // Different button link types. These are links styled as a button.
